create the hero section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
         >
       </div>
     </header>
-    <section class="banner border">
-      <!-- backgound image :: clip-path: polygon(100% 0, 100% 32%, 48% 16%, 0 31%, 0 0); -->
-      <div class="center-div border">
+    <section class="banner">
+      <div class="hero">
+        <div class="left"></div>
+        <div class="right"></div>
+      </div>
+      <div class="welcome center-div">
         <h3>welcome to our website</h3>
         <p>we have new design that's fresh, modern, and easy to use</p>
       </div>
