fix the theme button

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <header class="container">
       <div class="logo">Web Topics</div>
       <div class="buttons">
-        <a href="" target="_blank"
-          ><ion-icon
+        <a href="#" id="theme-toggle" onclick="toggleTheme()">
+          <ion-icon
             name="moon-outline"
             style="margin-right: 3px; margin-bottom: -2px"
-          ></ion-icon
-          >Dark mode</a
-        >
+          ></ion-icon>
+          Dark mode
+        </a>
         <a href="" target="_blank">
           <ion-icon
             name="heart-outline"
