fix the search and filter icons

--- a/index.html
+++ b/index.html
@@ -44,20 +44,29 @@
     </section>
     <main class="main container">
       <div class="search-and-filter">
-        <div class="search">Search the website</div>
+        <div>
+          <div class="search">
+            <ion-icon
+              name="search-outline"
+              style="margin-right: 3px; margin-bottom: -2px"
+              >></ion-icon
+            >
+            Search the website
+          </div>
+        </div>
         <div class="filters">
           <div class="sort">
             <div>sort by:</div>
             <div class="select">
               <div>default</div>
-              <div>V</div>
+              <div><ion-icon name="chevron-down-outline"></ion-icon></div>
             </div>
           </div>
           <div class="filter">
             <div>filter by:</div>
             <div class="select">
               <div>default</div>
-              <div>V</div>
+              <div><ion-icon name="chevron-down-outline"></ion-icon></div>
             </div>
           </div>
         </div>
