create the footer

--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
         </div>
       </section>
     </main>
-
+    <footer>
+      <div>Developed with ❤️ <span>&#169;</span> 2024</div>
+    </footer>
     <script src="js/script.js"></script>
     <script
       type="module"
