finish the course details page

--- a/course-detail.html
+++ b/course-detail.html
@@ -67,6 +67,31 @@
           </div>
         </div>
       </div>
+      <div class="sub-topics">
+        <ul>
+          <li><h3>HTML Sub Topics</h3></li>
+          <li>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
+            <div>Lorem ipsum dolor sit amet.</div>
+          </li>
+          <li>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
+            <div>Lorem ipsum dolor sit amet.</div>
+          </li>
+          <li>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
+            <div>Lorem ipsum dolor sit amet.</div>
+          </li>
+          <li>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
+            <div>Lorem ipsum dolor sit amet.</div>
+          </li>
+          <li>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
+            <div>Lorem ipsum dolor sit amet.</div>
+          </li>
+        </ul>
+      </div>
     </section>
     <!--  -->
     <footer id="footer-container"></footer>
