fix spaces in the course data page

--- a/course-detail.html
+++ b/course-detail.html
@@ -18,55 +18,62 @@
     <div id="header-container"></div>
 
     <!-- Add course details content here -->
-    <section class="data container">
-      <div class="center-data" style="position: relative">
-        <div class="course-data">
-          <div class="course-type">web development language</div>
-          <h3>HTML</h3>
-          <div class="rate" style="margin: 0">
-            <ion-icon name="star-sharp"></ion-icon>
-            <ion-icon name="star-sharp"></ion-icon>
-            <ion-icon name="star-sharp"></ion-icon>
-            <ion-icon name="star-sharp"></ion-icon>
-            <ion-icon name="star-half-outline"></ion-icon>
+    <section class="data">
+      <!-- Top  -->
+      <div class="top-data-section">
+        <div class="center-data" style="position: relative">
+          <div class="course-data">
+            <div class="course-type">web development language</div>
+            <h3>HTML</h3>
+            <div class="rate" style="margin: 0">
+              <ion-icon name="star-sharp"></ion-icon>
+              <ion-icon name="star-sharp"></ion-icon>
+              <ion-icon name="star-sharp"></ion-icon>
+              <ion-icon name="star-sharp"></ion-icon>
+              <ion-icon name="star-half-outline"></ion-icon>
+            </div>
+            <p class="description">
+              HTML (Hypertext Markup Language) is the standard markup language
+              for creating web pages and other information that can be displayed
+              in a web browser. It provides a structure for content and defines
+              how it should be displayed on a web page, including text, images,
+              and multimedia. HTML is essential for creating static web pages
+              and is a foundational technology for the World Wide Web.
+            </p>
           </div>
-          <p class="description">
-            HTML (Hypertext Markup Language) is the standard markup language for
-            creating web pages and other information that can be displayed in a
-            web browser. It provides a structure for content and defines how it
-            should be displayed on a web page, including text, images, and
-            multimedia. HTML is essential for creating static web pages and is a
-            foundational technology for the World Wide Web.
-          </p>
-        </div>
-        <div>
-          <div class="card-data">
-            <img src="/images/javascript.jpg" alt="javascript" />
-            <div class="card-data-content">
-              <div class="type-and-auther">
-                <div class="type">HTML</div>
-                <div>by</div>
-                <div class="author"><a href="">Sarah smith</a></div>
-              </div>
-              <div class="favourites">
-                <p>interested about this topic?</p>
-                <button>
-                  Add to Favorites<ion-icon
-                    name="heart-outline"
-                    style="margin-left: 5px; margin-bottom: -8px"
-                  ></ion-icon>
-                </button>
-                <div
-                  class="author"
-                  style="text-align: center; margin-top: 10px"
-                >
-                  unlimited credits
+          <!--  -->
+          <div>
+            <div class="card-data">
+              <img src="/images/javascript.jpg" alt="javascript" />
+              <div class="card-data-content">
+                <div class="type-and-auther">
+                  <div class="type">HTML</div>
+                  <div>by</div>
+                  <div class="author"><a href="">Sarah smith</a></div>
+                </div>
+                <div class="favourites">
+                  <p>interested about this topic?</p>
+                  <button>
+                    Add to Favorites<ion-icon
+                      name="heart-outline"
+                      style="margin-left: 5px; margin-bottom: -8px"
+                    ></ion-icon>
+                  </button>
+                  <div
+                    class="author"
+                    style="text-align: center; margin-top: 10px"
+                  >
+                    unlimited credits
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <!--  -->
         </div>
       </div>
+      <!-- End Top  -->
+      <!-- Bottom -->
       <div class="sub-topics">
         <ul>
           <li><h3>HTML Sub Topics</h3></li>
@@ -92,6 +99,7 @@
           </li>
         </ul>
       </div>
+      <!-- End Bottom -->
     </section>
     <!--  -->
     <footer id="footer-container"></footer>
